Fixed overflow and scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,10 @@
 body{
     background-image: url('../images/newsAlert.jpg');
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 .headerBox{
     text-align: center;
